--- a/spraying.html
+++ b/spraying.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/output.css">
     <link rel="stylesheet" href="css/font-rf-rufo.css">
     <link rel="stylesheet" href="css/icons-style.css">
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 
 
 </head>
@@ -165,8 +167,174 @@
                 <h4>Преимущества опрыскивания с помощью БПЛА</h4>
             </div>
             <div class="bg-plus-left"></div>
-            <div class="plus-items flex justify-between gap-5">
-                <div class="plus-item bg-bgflex pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
+
+            <!-- Swiper -->
+            <div class="swiper plusSwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="plus-item-sw bg-bgflex pt-10 pb-14 px-6 h-fit cursor-pointer rounded-lg">
+                            <div class="plus-title flex items-center">
+                                <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/econom.png"
+                                        alt="econom-img"></div>
+                                <h5 class="text-[22px] leading-[22px]">Экономия</h5>
+                            </div>
+                            <div class="plus-line mt-4 mb-11 block w-full h-[1px] bg-lightgreen"></div>
+                            <div class="plus-info">
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Снижение расхода препаратов до 30%</span>
+                                </div>
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Проведение работ без уплотнения почвы
+                                        +5-10% к
+                                        урожаю</span>
+                                </div>
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Обработка высоких культур без
+                                        повреждений</span>
+                                </div>
+                                <div class="flex">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Операционные издержки— экономия на
+                                        использовании
+                                        ГСМ,
+                                        заработной платы и обслуживании техники</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="plus-item-sw bg-bgflex pt-10 pb-[77px] px-6 h-fit cursor-pointer rounded-lg">
+                            <div class="plus-title flex items-center">
+                                <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconDrone.svg"
+                                        alt="econom-img"></div>
+                                <h5 class="text-[22px] leading-[22px]">Эффективность</h5>
+                            </div>
+                            <div class="plus-line mt-4 mb-11 block w-full h-[1px] bg-lightgreen"></div>
+                            <div class="plus-info">
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Работаем по любой геометрии поля</span>
+                                </div>
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Возможность работать на влажных грунтах,
+                                        на
+                                        крутых склонах,
+                                        под линиями электропередач, вблизи населенных пунктов и
+                                        водоемов</span>
+                                </div>
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Большее количество капель на единицу
+                                        площади</span>
+                                </div>
+                                <div class="flex">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Отсутствует необходимость подвоза
+                                        большого количества воды</span>
+                                </div>
+                                <div class="flex">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Обработка листа со всех сторон</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="plus-item-sw bg-bgflex pt-10 pb-14 px-6 h-fit cursor-pointer rounded-lg">
+                            <div class="plus-title flex items-center">
+                                <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconTime.svg"
+                                        alt="econom-img"></div>
+                                <h5 class="text-[22px] leading-[22px]">Оперативность</h5>
+                            </div>
+                            <div class="plus-line mt-4 mb-11 block w-full h-[1px] bg-lightgreen"></div>
+                            <div class="plus-info">
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Возможность защиты ваших растений до 1000
+                                        га за
+                                        рабочую
+                                        смену</span>
+                                </div>
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Круглосуточный режим работы</span>
+                                </div>
+                                <div class="flex mb-5">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Плановые и внеплановые обработки по
+                                        требованию</span>
+                                </div>
+                                <div class="flex">
+                                    <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
+                                                stroke-linecap="round" stroke-linejoin="round" />
+                                        </svg></div>
+                                    <span class="text-lg leading-8 font-light">Точечная обработка СЗР в требуемых
+                                        местах</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
+
+            <div class="plus-items lg:hidden flex justify-between gap-5">
+                <div
+                    class="plus-item bg-bgflex hover:bg-black pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
                     <div class="plus-title flex items-center">
                         <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/econom.png"
                                 alt="econom-img"></div>
@@ -211,7 +379,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="plus-item bg-bgflex pt-10 pb-[77px] px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
+                <div
+                    class="plus-item bg-bgflex hover:bg-black pt-10 pb-[77px] px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
                     <div class="plus-title flex items-center">
                         <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconDrone.svg"
                                 alt="econom-img"></div>
@@ -266,7 +435,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="plus-item bg-bgflex pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
+                <div
+                    class="plus-item bg-bgflex hover:bg-black pt-10 pb-14 px-6 basis-1/3 h-fit cursor-pointer rounded-lg">
                     <div class="plus-title flex items-center">
                         <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconTime.svg"
                                 alt="econom-img"></div>
@@ -400,8 +570,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/spraying.css">
 
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+
     <!-- JS file -->
     <script src="js/main.js"></script>
+    <script src="js/swiper.js"></script>
 
 </body>
 
