swiper adaptation and ending them

--- a/spraying.html
+++ b/spraying.html
@@ -172,39 +172,49 @@
             <div class="swiper plusSwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="plus-item-sw bg-bgflex pt-10 pb-14 px-6 h-fit cursor-pointer rounded-lg">
+                        <div
+                            class="plus-item-sw bg-black pt-10 pb-14 px-6 sm:pb-7 sm:pt-7 h-fit cursor-pointer rounded-lg">
                             <div class="plus-title flex items-center">
                                 <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/econom.png"
                                         alt="econom-img"></div>
-                                <h5 class="text-[22px] leading-[22px]">Экономия</h5>
+                                <h5 class="text-[22px] sm:text-xl leading-[22px]">Экономия</h5>
                             </div>
-                            <div class="plus-line mt-4 mb-11 block w-full h-[1px] bg-lightgreen"></div>
+                            <div class="plus-line mt-4 mb-11 ss:mb-7 block w-full h-[1px] bg-lightgreen"></div>
                             <div class="plus-info">
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Снижение расхода препаратов до 30%</span>
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Снижение
+                                        расхода препаратов
+                                        до 30%</span>
                                 </div>
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Проведение работ без уплотнения почвы
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Проведение
+                                        работ без
+                                        уплотнения почвы
                                         +5-10% к
                                         урожаю</span>
                                 </div>
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Обработка высоких культур без
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Обработка
+                                        высоких культур
+                                        без
                                         повреждений</span>
                                 </div>
                                 <div class="flex">
@@ -213,7 +223,10 @@
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Операционные издержки— экономия на
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Операционные
+                                        издержки—
+                                        экономия на
                                         использовании
                                         ГСМ,
                                         заработной платы и обслуживании техники</span>
@@ -222,41 +235,51 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="plus-item-sw bg-bgflex pt-10 pb-[77px] px-6 h-fit cursor-pointer rounded-lg">
+                        <div
+                            class="plus-item-sw bg-black pt-10 sm:pt-7 pb-[77px] sm:pb-7 px-6 h-fit cursor-pointer rounded-lg">
                             <div class="plus-title flex items-center">
                                 <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconDrone.svg"
                                         alt="econom-img"></div>
-                                <h5 class="text-[22px] leading-[22px]">Эффективность</h5>
+                                <h5 class="text-[22px] sm:text-xl leading-[22px]">Эффективность</h5>
                             </div>
-                            <div class="plus-line mt-4 mb-11 block w-full h-[1px] bg-lightgreen"></div>
+                            <div class="plus-line mt-4 mb-11 ss:mb-7 block w-full h-[1px] bg-lightgreen"></div>
                             <div class="plus-info">
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Работаем по любой геометрии поля</span>
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Работаем
+                                        по любой геометрии
+                                        поля</span>
                                 </div>
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Возможность работать на влажных грунтах,
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Возможность
+                                        работать на
+                                        влажных грунтах,
                                         на
                                         крутых склонах,
                                         под линиями электропередач, вблизи населенных пунктов и
                                         водоемов</span>
                                 </div>
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Большее количество капель на единицу
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Большее
+                                        количество капель на
+                                        единицу
                                         площади</span>
                                 </div>
                                 <div class="flex">
@@ -265,7 +288,10 @@
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Отсутствует необходимость подвоза
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Отсутствует
+                                        необходимость
+                                        подвоза
                                         большого количества воды</span>
                                 </div>
                                 <div class="flex">
@@ -274,46 +300,59 @@
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Обработка листа со всех сторон</span>
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Обработка
+                                        листа со всех
+                                        сторон</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="plus-item-sw bg-bgflex pt-10 pb-14 px-6 h-fit cursor-pointer rounded-lg">
+                        <div
+                            class="plus-item-sw bg-black pt-10 pb-14 px-6 sm:pb-7 sm:pt-7 h-fit cursor-pointer rounded-lg">
                             <div class="plus-title flex items-center">
                                 <div class="plus-img"><img class="object-cover mr-4" src="img/spraying/iconTime.svg"
                                         alt="econom-img"></div>
-                                <h5 class="text-[22px] leading-[22px]">Оперативность</h5>
+                                <h5 class="text-[22px] sm:text-xl leading-[22px]">Оперативность</h5>
                             </div>
-                            <div class="plus-line mt-4 mb-11 block w-full h-[1px] bg-lightgreen"></div>
+                            <div class="plus-line mt-4 mb-11 ss:mb-7 block w-full h-[1px] bg-lightgreen"></div>
                             <div class="plus-info">
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Возможность защиты ваших растений до 1000
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Возможность
+                                        защиты ваших
+                                        растений до 1000
                                         га за
                                         рабочую
                                         смену</span>
                                 </div>
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Круглосуточный режим работы</span>
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Круглосуточный
+                                        режим
+                                        работы</span>
                                 </div>
-                                <div class="flex mb-5">
+                                <div class="flex mb-5 ss:mb-4">
                                     <div class="check-img mr-[14px]"><svg width="24" height="24" viewBox="0 0 24 24"
                                             fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Плановые и внеплановые обработки по
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Плановые
+                                        и внеплановые
+                                        обработки по
                                         требованию</span>
                                 </div>
                                 <div class="flex">
@@ -322,7 +361,10 @@
                                             <path d="M4 12L10 18L20 6" stroke="white" stroke-width="2"
                                                 stroke-linecap="round" stroke-linejoin="round" />
                                         </svg></div>
-                                    <span class="text-lg leading-8 font-light">Точечная обработка СЗР в требуемых
+                                    <span
+                                        class="text-lg sm:text-base leading-8 sm:leading-[18px] font-light ss:leading-6">Точечная
+                                        обработка СЗР в
+                                        требуемых
                                         местах</span>
                                 </div>
                             </div>
