--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                                     <li class="overlay-m-icons icon_opriskivaniy text-left"><a href="./spraying.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Опрыскивание</a>
                                     </li>
-                                    <li class="overlay-m-icons icon_kartografi text-left"><a href="./agromonitoring.html"
+                                    <li class="overlay-m-icons icon_kartografi text-left"><a
+                                            href="./agromonitoring.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Картография
                                             и
                                             мониторинг</a></li>
@@ -666,30 +667,31 @@
             <div class="news-box flex justify-between md:hidden">
                 <div class="news-item basis-[31%]">
                     <picture><img src="img/main/news1.jpg" alt=""></picture>
-                    <h5 class="text-xl leading-[22px] my-12">Дроны – будущее сельского хозяйства</h5>
-                    <p class="my-8 font-light text-lg">Новые технологии не обходят стороной и самую консервативную
+                    <h5 class="text-xl leading-[22px] my-12 pl-4">Дроны – будущее сельского хозяйства</h5>
+                    <p class="my-8 font-light text-lg px-4">Новые технологии не обходят стороной и самую консервативную
                         отрасль – сельское хозяйство. Согласно прогнозам международной общественной организации
                         Association for Unmanned Vehicle Systems International, в скором времени агросектор станет
                         крупнейшим потребителем дронов – беспилотных летательных аппаратов (БПЛА).</p>
-                    <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
+                    <div class="news-more pb-7 pl-4"><a href="#">Читать полностью</a></div>
                 </div>
                 <div class="news-item basis-[31%]">
                     <picture><img src="img/main/news2.jpg" alt=""></picture>
-                    <h5 class="text-xl leading-[22px] my-12">Зачем нужны беспилотники в сельском хозяйстве?</h5>
-                    <p class="my-8 font-light text-lg">Использование дронов в земледелии и в целом в сельском хозяйстве
+                    <h5 class="text-xl leading-[22px] my-12 pl-4">Зачем нужны беспилотники в сельском хозяйстве?</h5>
+                    <p class="my-8 font-light text-lg px-4">Использование дронов в земледелии и в целом в сельском
+                        хозяйстве
                         - одно из наиболее перспективных направлений применения этой технологии. БЛА могут быть
                         эффективно использованы для планирования и контроля этапов сельскохозяйственного производства, а
                         также для химической обработки посевов и других растений. </p>
-                    <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
+                    <div class="news-more pb-7 pl-4"><a href="#">Читать полностью</a></div>
                 </div>
                 <div class="news-item basis-[31%]">
                     <picture><img src="img/main/news3.jpg" alt=""></picture>
-                    <h5 class="text-xl leading-[22px] my-12">Создание цифровых карт и контуров полей</h5>
-                    <p class="my-8 font-light text-lg">Многие руководители агрохозяйств только приблизительно знают
+                    <h5 class="text-xl leading-[22px] my-12 pl-4">Создание цифровых карт и контуров полей</h5>
+                    <p class="my-8 font-light text-lg px-4">Многие руководители агрохозяйств только приблизительно знают
                         площади своих полей, и это негативно влияет на точность расчетов внесения минудобрений и
                         подсчета полученной продукции. Чтобы эффективно управлять сельскохозяйственным предприятием
                         потребуется точное знание посевных площадей.</p>
-                    <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
+                    <div class="news-more pb-7 pl-4"><a href="#">Читать полностью</a></div>
                 </div>
             </div>
         </div>
